Editing and clean ups of the http://www.nmr-relax.com/download.html webpage.
This includes dropping the Python version to 2.3 and removing the info about Python 3 not being
supported.

--- a/download.html
+++ b/download.html
@@ -50,28 +50,28 @@
 
       <p>The current stable release is relax version 2.1.1 (21 September 2012).</p>
 
-      <p>relax binaries have been pre-compiled for a number of computer architectures.  These are based on Python 2.5 or 2.6 but can work with other Python versions on certain operating systems and certain architectures.  However if not, or if binaries for your system do not exist, please download the source release (the compilation of binaries is not a pre-requesite for using relax).  Note that some binary distribution files may not correspond to the most up to date version of relax.  If so, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the 'Open source infrastructure' chapter of the relax manual for details.</p>
+      <p>relax binaries have been pre-compiled for a number of computer architectures.  These are based on Python 2.7 but usually work with other Python versions.  If not, or if binaries for your system do not exist, please download the source release (note that the compilation of binary modules is not a prerequisite for using relax).  If the binary distribution file for your architecture does not correspond to the most up to date version of relax, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the <a href="http://www.nmr-relax.com/manual/Open_source_infrastructure.html">Open source infrastructure</a> chapter of the relax manual for details.</p>
 
-      <p>For details about the relax GPG signatures and their usage, see the Security section at the end of this page.</p>
+      <p>For details about the relax GPG signatures and their usage, see the Security section at the <a href="http://www.nmr-relax.com/download.html#Security">end of this page</a>.</p>
 
       <h3>Dependencies</h3>
 
-      <p>Minimally both <a href="http://python.org">Python</a> and <a href="http://numpy.scipy.org/">NumPy</a> (Numerical Python) need to be installed on the system for relax to run.  A few other Python packages are optional and relax will function perfectly well without these, although certain features may be missing.  Additional Python packages may be required on certain platforms.</p>
-
-      <h4>SciPy</h4>
-
-      <p>Numerical integration is required for the frame order theory.  This is currently not implemented within relax so the QUADPACK numerical integration provided by <a href="http://www.scipy.org/">SciPy</a> is used.  Without this package being installed, the frame order analysis will not be accessible.</p>
+      <p>Minimally both <a href="http://python.org">Python</a> and <a href="http://numpy.scipy.org/">NumPy</a> need to be installed on the system for relax to run.  A few other Python packages are optional and, although certain features may be missing, relax will operate without these.  Additional Python packages may be required on specific operating systems.</p>
 
       <h4>wxPython</h4>
 
       <p>The relax graphical user interface (GUI) is implemented using <a href="http://www.wxpython.org/">wxPython</a>.  This package is essential if the GUI is to be used.</p>
+
+      <h4>SciPy</h4>
+
+      <p>Numerical integration is required for the frame order theory.  This is currently not implemented within relax so the QUADPACK numerical integration provided by <a href="http://www.scipy.org/">SciPy</a> is used.  Without this package being installed, the frame order analysis will not be accessible.</p>
 
 
 <!-- GNU Linux -->
     <div id="GNU_Linux" class="main_h2">
       <h2>GNU/Linux</h2>
 
-      <p>Pre-compiled binary releases for GNU/Linux can be downloaded for both 32 bit (i686) and 64 bit (x86_64) machines.  These have been compiled for Python 2.7, though should work for versions 2.5 and 2.6.  But if there are problems with the compiled C modules, please either use the <a href="download.html#Source_code_release">source distribution</a> or install Python 2.7.</p>
+      <p>Pre-compiled binary releases for GNU/Linux can be downloaded for both 32-bit (i686) and 64-bit (x86_64) machines.  These have been compiled for Python 2.7, though should work for versions 2.5 and 2.6.  But if there are problems with the compiled C modules, please either use the <a href="download.html#Source_code_release">source distribution</a> or install Python 2.7.</p>
 
 <table cellspacing="10">
   <tbody>
@@ -99,7 +99,7 @@
         <h3>Dependencies</h3>
           <p>If they exist, please install your distribution specific packages for the following dependencies.</p>
           <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> &gt;= 2.5 (excluding &gt;= 3.0): <a  href="http://www.python.org/ftp/python/2.7.3/Python-2.7.3.tar.bz2">Python-2.7.3.tar.bz2</a></li>
+            <li><a href="http://python.org">Python</a> &gt;= 2.3: <a  href="http://www.python.org/ftp/python/2.7.3/Python-2.7.3.tar.bz2">Python-2.7.3.tar.bz2</a></li>
             <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></li>
             <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
             <li><a href="http://www.wxpython.org/">wxPython</a> (optional) &gt;= 2.8: <a href="http://www.wxpython.org/download.php#stable">wxPython stable downloads</a></li>
@@ -112,7 +112,7 @@
 <!-- MS Windows -->
     <div id="MS_Windows" class="main_h2">
       <h2>MS Windows</h2>
-      <p>The pre-compiled binary release for 32 bit Windows can be downloaded from the link below.  These have been compiled for Python 2.7 therefore, if there are problems with the compiled C modules and the command:</p>
+      <p>The pre-compiled binary release for 32 bit Windows can be downloaded from the link below.  These have been compiled for Python 2.7 therefore if there are problems with the compiled C modules and the command:</p>
       <p><em>$ relax --info</em></p>
       <p>says that the C modules are not installed, please install Python 2.7.</p>
 
@@ -135,7 +135,7 @@
 
         <h3>Dependencies</h3>
           <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> &gt;= 2.5 (excluding &gt;= 3.0, 2.7 recommended): <a href="http://www.python.org/ftp/python/2.7.3/python-2.7.3.msi">python-2.7.3.msi</a></li>
+            <li><a href="http://python.org">Python</a> &gt;= 2.3: <a href="http://www.python.org/ftp/python/2.7.3/python-2.7.3.msi">python-2.7.3.msi</a></li>
             <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></li>
             <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
             <li><a href="http://ipython.scipy.org/moin/PyReadline/Intro">pyreadline</a> &gt;= 1.3: <a href="https://launchpad.net/pyreadline/+download">pyreadline downloads</a></li>
@@ -195,7 +195,7 @@
 
         <h3>Dependencies</h3>
           <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> &gt;= 2.5 (excluding &gt;= 3.0): <a href="http://www.python.org/ftp/python/2.7.3/python-2.7.3-macosx10.3.dmg">python-2.7.3-macosx10.3.dmg</a></li>
+            <li><a href="http://python.org">Python</a> &gt;= 2.3: <a href="http://www.python.org/ftp/python/2.7.3/python-2.7.3-macosx10.3.dmg">python-2.7.3-macosx10.3.dmg</a></li>
             <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></li>
             <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
             <li><a href="http://www.wxpython.org/">wxPython</a> (optional) &gt;= 2.8: <a href="http://www.wxpython.org/download.php#stable">wxPython stable downloads</a></li>
@@ -240,7 +240,7 @@
 
         <h3>Dependencies</h3>
           <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> &gt;= 2.5 (excluding &gt;= 3.0): <a href="http://www.python.org/download/releases/2.7.3/">Python 2.7.3 release page</a></li>
+            <li><a href="http://python.org">Python</a> &gt;= 2.3: <a href="http://www.python.org/download/releases/2.7.3/">Python 2.7.3 release page</a></li>
             <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></li>
             <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
             <li><a href="http://www.wxpython.org/">wxPython</a> (optional) &gt;= 2.8: <a href="http://www.wxpython.org/download.php#stable">wxPython stable downloads</a></li>
@@ -277,7 +277,7 @@
 
     <p><em>> svn up</em></p>
 
-    <p>Keep in mind: since this code changes often, at some points, it could be unstable and non functional.</p>
+    <p>Keep in mind that since this code changes often, it could sometimes be unstable and non functional.</p>
 
 </div>
 
