--- a/links.html
+++ b/links.html
@@ -74,6 +74,11 @@
       <td>An easy-to-use archiving service for electronic mailing lists.</td>
       <td>The archived relax mailing lists include <a href="http://mail-archive.com/relax-announce@gna.org/">relax-announce</a>, <a href="http://mail-archive.com/relax-users@gna.org/">relax-users</a>, <a href="http://mail-archive.com/relax-devel@gna.org/">relax-devel</a>, and <a href="http://mail-archive.com/relax-commits@gna.org/">relax-commits</a>.</td>
     </tr>
+    <tr id="MARC" class="link_tr">
+      <td class="link_logo_td"><font size="5"><strong><a href="http://marc.info/">MARC</a></strong></font></td>
+      <td>Mailing list ARChives.</td>
+      <td>The archived relax mailing lists include <a href="http://marc.info/?l=relax-announce&r=1&w=2">relax-announce</a>, <a href="http://marc.info/?l=relax-users&r=1&w=2">relax-users</a>, <a href="http://marc.info/?l=relax-devel&r=1&w=2">relax-devel</a>, and <a href="http://marc.info/?l=relax-commits&r=1&w=2">relax-commits</a>.</td>
+    </tr>
     <tr id="Freecode" class="link_tr">
       <td class="link_logo_td"><a href="http://freecode.com/projects/nmr-relax"><img src="images/freecode.png" alt="Freecode logo" class="image"/></a></td>
       <td>Freecode, previously known as freshmeat, is the Web&#39;s largest index of Unix and cross-platform software (mainly open source).</td>
