--- a/communication.html
+++ b/communication.html
@@ -66,7 +66,7 @@
        <a href="http://dir.gmane.org/gmane.science.nmr.relax.announce">Gmane archives</a> (<a href="http://news.gmane.org/gmane.science.nmr.relax.announce">thread</a>, <a href="http://blog.gmane.org/gmane.science.nmr.relax.announce">blog</a>, <a href="nntp://news.gmane.org/gmane.science.nmr.relax.announce">NNTP</a>, <a href="http://rss.gmane.org/messages/excerpts/gmane.science.nmr.relax.announce">RSS</a>)
       </li>
       <li>
-       <a href="http://marc.info/?l=relax-announce&r=1&w=2">MARC (Mailing list ARChives)</a>
+       <a href="http://marc.info/?l=relax-announce&amp;r=1&amp;w=2">MARC (Mailing list ARChives)</a>
       </li>
      </ul>
     </div>
@@ -85,7 +85,7 @@
        <a href="http://dir.gmane.org/gmane.science.nmr.relax.user">Gmane archives</a> (<a href="http://news.gmane.org/gmane.science.nmr.relax.user">thread</a>, <a href="http://blog.gmane.org/gmane.science.nmr.relax.user">blog</a>, <a href="nntp://news.gmane.org/gmane.science.nmr.relax.user">NNTP</a>, <a href="http://rss.gmane.org/messages/excerpts/gmane.science.nmr.relax.user">RSS</a>)
       </li>
       <li>
-       <a href="http://marc.info/?l=relax-users&r=1&w=2">MARC (Mailing list ARChives)</a>
+       <a href="http://marc.info/?l=relax-users&amp;r=1&amp;w=2">MARC (Mailing list ARChives)</a>
       </li>
      </ul>
     </div>
@@ -104,7 +104,7 @@
        <a href="http://dir.gmane.org/gmane.science.nmr.relax.devel">Gmane archives</a> (<a href="http://news.gmane.org/gmane.science.nmr.relax.devel">thread</a>, <a href="http://blog.gmane.org/gmane.science.nmr.relax.devel">blog</a>, <a href="nntp://news.gmane.org/gmane.science.nmr.relax.devel">NNTP</a>, <a href="http://rss.gmane.org/messages/excerpts/gmane.science.nmr.relax.devel">RSS</a>)
       </li>
       <li>
-       <a href="http://marc.info/?l=relax-devel&r=1&w=2">MARC (Mailing list ARChives)</a>
+       <a href="http://marc.info/?l=relax-devel&amp;r=1&amp;w=2">MARC (Mailing list ARChives)</a>
       </li>
      </ul>
      </div>
@@ -123,7 +123,7 @@
        <a href="http://dir.gmane.org/gmane.science.nmr.relax.scm">Gmane archives</a> (<a href="http://news.gmane.org/gmane.science.nmr.relax.scm">thread</a>, <a href="http://blog.gmane.org/gmane.science.nmr.relax.scm">blog</a>, <a href="nntp://news.gmane.org/gmane.science.nmr.relax.scm">NNTP</a>, <a href="http://rss.gmane.org/messages/excerpts/gmane.science.nmr.relax.scm">RSS</a>)
       </li>
       <li>
-       <a href="http://marc.info/?l=relax-commits&r=1&w=2">MARC (Mailing list ARChives)</a>
+       <a href="http://marc.info/?l=relax-commits&amp;r=1&amp;w=2">MARC (Mailing list ARChives)</a>
       </li>
      </ul>
      </div>
