--- a/faq.html
+++ b/faq.html
@@ -26,7 +26,15 @@
   <div class="main_box">
     <h1>Frequently Asked Questions (FAQ)</h1>
 
-     <h3>How do I obtain the newest relax source code?</h3>
+    <ul>
+    <li><a href="faq.html#source_code">How do I obtain the newest relax source code?</a></li>
+    <li><a href="faq.html#source_code_branch">How do I check out a relax source code branch?</a></li>
+    <li><a href="faq.html#radian_units">The equations (or units) used by relax are incorrect!</a></li>
+    </ul>
+  </div>
+
+  <div class="main_box">
+     <h3 id="source_code">How do I obtain the newest relax source code?</h3>
 
       <p>To obtain the most up to date copy of the relax source code without waiting for a new release, the new code can be checked out from the repository by typing:</p>
       <p><em>$ svn co svn://svn.gna.org/svn/relax/trunk relax-trunk</em></p>
@@ -34,15 +42,21 @@
       <p><em>$ svn co http://svn.gna.org/svn/relax/trunk relax-trunk</em></p>
       <p>If you already have a checked out copy, try typing:</p>
       <p><em>$ svn up</em></p>
-      <p>This requires installation of the <a href="http://subversion.tigris.org/">subversion program</a>.  If the fitting of the R<sub>1</sub> and R<sub>2</sub> NMR relaxation rates is required, the relaxation curve-fitting C modules will need to be compiled using <a href='http://www.scons.org/'>SCons</a>.  For more information, see the compilation subsection of the <a href="http://www.nmr-relax.com/download.html#Source_code_repository">relax downloads</a> page.</p>
+      <p>This requires installation of the <a href="http://subversion.tigris.org/">subversion program</a>.  If the fitting of the R<sub>1</sub> and R<sub>2</sub> NMR relaxation rates is required, the relaxation curve-fitting C modules will need to be compiled using <a href="http://www.scons.org/">SCons</a>.  For more information, see the compilation subsection of the <a href="http://www.nmr-relax.com/download.html#Source_code_repository">relax downloads</a> page.</p>
 
-     <h3>How do I check out a relax source code branch?</h3>
+     <h3 id="source_code_branch">How do I check out a relax source code branch?</h3>
 
       <p>Sometimes code for a new analysis type or a new feature is developed within a dedicated branch within the <a href="http://svn.gna.org/viewcvs/relax/">relax repository</a>.  To obtain for example the incomplete relaxation dispersion relax branch, type:</p>
       <p><em>$ svn co svn://svn.gna.org/svn/relax/branches/relax_disp</em></p>
       <p>or:</p>
       <p><em>$ svn co http://svn.gna.org/svn/relax/branches/relax_disp</em></p>
       <p>This will create the directory <em>relax_disp</em> containing the source code of the branch.</p>
+
+     <h3 id="radian_units">The equations (or units) used by relax are incorrect!</h3>
+
+     <p>This is more a commonly stated point rather than a question.  But if you believe that NMR relaxation data should be measured in Hertz, that the molecular correlation times or internal correlation times do not contain radian units, that the units for spherical harmonics is not radians, or that the rotation power spectral density functions do not contain radian units, the following links are for you.</p>
+     <p>Radians are a dimensionless and hidden unit ubiquitous to NMR.  A <a href="http://permalink.gmane.org/gmane.science.nmr.relax.user/723">detailed description of this hidden radian unit as used in NMR</a> has been written as reference for understanding the unit in the context of the SI system.  Copies of this description can also be found <a href="http://marc.info/?l=relax-users&amp;m=135070801026465&amp;w=2">here</a>, <a href="https://mail.gna.org/public/relax-users/2009-01/msg00000.html">here</a> or <a href="http://www.mail-archive.com/relax-users@gna.org/msg00582.html">here</a>.</p>
+     <p>A <a href="http://permalink.gmane.org/gmane.science.nmr.relax.devel/1034">detailed derivation in the context of Abragam's relaxation equations</a> may also help.  Copies of this derivation can be found <a href="https://mail.gna.org/public/relax-devel/2007-06/msg00012.html">here</a> or <a href="http://www.mail-archive.com/relax-devel@gna.org/msg00975.html">here</a> as well.</p>
 
   </div>
 
