Added links to http://www.nmr-relax.com to the VDM-Verlag published thesis on Amazon.
This link is http://www.amazon.com/Protein-Dynamics-Model-free-Analysis-Relaxation/dp/3639057627 and
the book cover is now included on http://www.nmr-relax.com/features.html.

--- a/features.html
+++ b/features.html
@@ -44,6 +44,15 @@
 
     <p>Other literature related to the improved model-free analysis used within relax, which can nevertheless be applied to other techniques, include model-free model selection (<a href="refs.html#dAuvergneGooley03">d'Auvergne and Gooley, 2003</a>; <a href="refs.html#Chen04">Chen et al., 2004</a>), model-free model elimination (<a href="refs.html#dAuvergneGooley06">d'Auvergne and Gooley, 2006</a>), the theory (<a href="refs.html#dAuvergneGooley07">d'Auvergne and Gooley, 2007</a>) behind the new model-free optimisation protocol (<a href="refs.html#dAuvergneGooley08b">d'Auvergne and Gooley, 2008b</a>), and the hybridisation of different models (<a href="refs.html#Horne07">Horne et al., 2007</a>; <a href="refs.html#dAuvergneGooley08b">d'Auvergne and Gooley, 2008b</a>).  Most of these details can be found in the PhD thesis of <a href="refs.html#dAuvergne06">d'Auvergne, 2006</a>.</p>
 
+   <h3>Book</h3>
+    <table cellpadding="5">
+      <tbody>
+       <tr>
+        <td class="link_logo_td"><a href="http://www.amazon.com/Protein-Dynamics-Model-free-Analysis-Relaxation/dp/3639057627"><img src="images/book_of_thesis_small.png" alt="Protein Dynamics - A Study of the Model-free Analysis of NMR Relaxation Data" class="image"/></a></td>
+        <td class="book_td">The reference "d'Auvergne, E. J. (2006).   Protein dynamics: a study of the model-free analysis of NMR relaxation data. Ph.D. thesis, Biochemistry and Molecular Biology, University of Melbourne." coving all of the model-free analysis aspects of relax is also published in book form.  This is available from <a href="http://www.amazon.com/Protein-Dynamics-Model-free-Analysis-Relaxation/dp/3639057627">amazon.com</a> and many other online book stores.</td>
+       </tr>
+      </tbody>
+     </table>
 
   <div class="main_h2" id="theories">
    <h2>Supported NMR theories</h2>
