--- a/refs.html
+++ b/refs.html
@@ -86,6 +86,7 @@
     <ul class="ref_ul">
      <li class="ref_li" id="dAuvergne06">d'Auvergne, E. J. (2006).   Protein dynamics: a study of the model-free analysis of NMR relaxation data. Ph.D. thesis, Biochemistry and Molecular Biology, University of Melbourne.  (<a href="http://eprints.infodiv.unimelb.edu.au/archive/00002799/">abstract</a>, <a href="http://eprints.infodiv.unimelb.edu.au/archive/00002799/01/thesis.pdf">PDF</a>)</li>
     </ul>
+    <p>It is also available in <a href="http://www.amazon.com/Protein-Dynamics-Model-free-Analysis-Relaxation/dp/3639057627">published book form</a>.</p>
   </div>
 
   <div class="main_h2" id="consistency_testing">
