Fix for the 'All releases' section of the http://www.nmr-relax.com/download.html webpage.

--- a/download.html
+++ b/download.html
@@ -311,7 +311,7 @@
 
       <p>Descriptions of these releases are available from the <a href='https://gna.org/news/?group=relax'>relax news page</a>.  These files can all be found on the <a href="http://download.gna.org/relax">relax download site</a>.</p>
 
-      <h2>The 2.1 line</h2>
+      <h2>The 2.2 line</h2>
 
 <table cellspacing="10">
   <tbody>
@@ -358,6 +358,20 @@
       <td><tt><small>ef51747d949dbf7d6161218ec9be5e4c</small></tt></td>
       <td><a href="http://download.gna.org/relax/relax-2.2.0.src.zip.sig" title="relax GPG signature">signature</a></td>
       <td>60972014</td>
+    </tr>
+  </tbody>
+</table>
+
+
+      <h2>The 2.1 line</h2>
+
+<table cellspacing="10">
+  <tbody>
+    <tr>
+      <td><strong>Distribution package</strong></td>
+      <td><strong>MD5 checksum</strong></td>
+      <td><strong>GPG signature</strong></td>
+      <td><strong>File size (bytes)</strong></td>
     </tr>
 
     <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2369">Version 2.1.2</a> (2012-10-17)</em></td></tr>
