--- a/download.html
+++ b/download.html
@@ -557,39 +557,39 @@
 
     <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2348">Version 1.3.16</a> (2012-05-11)</em></td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.16.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.16.GNU-Linux.i686.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-1.3.16.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>144459debbbb6bce6581bcb65245321f</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.16.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>20248226</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.16.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.16.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-1.3.16.GNU-Linux.x86_64.tar.bz2</a></td>
       <td><tt><small>bd4014c1c68ee6096554cc085e77b3be</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.16.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>20138604</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.16.Win32.zip" title="relax">relax-1.3.16.Win32.zip</a></td>
+      <td><a href="download_request.html" title="relax">relax-1.3.16.Win32.zip</a></td>
       <td><tt><small>8bab117103e40b6e317ea928424f0a57</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.16.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>22280183</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.16.Darwin.dmg" title="relax">relax-1.3.16.Darwin.dmg</a></td>
+      <td><a href="download_request.html" title="relax">relax-1.3.16.Darwin.dmg</a></td>
       <td><tt><small>f5c03859702c138846397f0b847304d7</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.16.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>147151686</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.16.src.tar.bz2" title="relax">relax-1.3.16.src.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-1.3.16.src.tar.bz2</a></td>
       <td><tt><small>c73dbe4d40c69dd823fd291914c655e9</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.16.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>20134339</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.16.src.zip" title="relax">relax-1.3.16.src.zip</a></td>
+      <td><a href="download_request.html" title="relax">relax-1.3.16.src.zip</a></td>
       <td><tt><small>a4a2a0e77e128a82e3285e7027e2edac</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.16.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>22326278</td>
     </tr>
 
