The 2.0.0 download links now point to http://www.nmr-relax.com/download_request.html.
These files are no longer stored on the Gna! servers so cannot be download from
http://www.nmr-relax.com/download.html.

--- a/download.html
+++ b/download.html
@@ -504,39 +504,39 @@
 
     <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2354">Version 2.0.0</a> (2012-06-12)</em></td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.0.0.GNU-Linux.i686.tar.bz2" title="relax">relax-2.0.0.GNU-Linux.i686.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.0.0.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>7e7b9bc5be6184e11063e0f53708a79b</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.0.0.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>21491773</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.0.0.GNU-Linux.x86_64.tar.bz2" title="relax">relax-2.0.0.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.0.0.GNU-Linux.x86_64.tar.bz2</a></td>
       <td><tt><small>9a09bb45c9d50a1de01efde0e3efb7c2</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.0.0.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>21503597</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.0.0.Win32.zip" title="relax">relax-2.0.0.Win32.zip</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.0.0.Win32.zip</a></td>
       <td><tt><small>a847e815bb3a24a5a3c1a33485374d7d</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.0.0.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>23546121</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.0.0.Darwin.dmg" title="relax">relax-2.0.0.Darwin.dmg</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.0.0.Darwin.dmg</a></td>
       <td><tt><small>9b0eb805c7f6c3f6c0d85425fce0d77f</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.0.0.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>157680591</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.0.0.src.tar.bz2" title="relax">relax-2.0.0.src.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.0.0.src.tar.bz2</a></td>
       <td><tt><small>3449d0fca777925b0f15a10b88a72a85</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.0.0.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>21502578</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.0.0.src.zip" title="relax">relax-2.0.0.src.zip</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.0.0.src.zip</a></td>
       <td><tt><small>6bd88af7414427c92caede2770b188e4</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.0.0.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>23584389</td>
     </tr>
   </tbody>
