Edits of the text in the download webpage section http://www.nmr-relax.com/download.html#All_releases.

--- a/download.html
+++ b/download.html
@@ -309,7 +309,7 @@
   <div id="All_releases" class="main_box">
     <h1>All releases</h1>
 
-      <p>Descriptions of these releases are available from the <a href='https://gna.org/news/?group=relax'>relax news page</a>.  These files can all be found on the <a href="http://download.gna.org/relax">relax download site</a>.</p>
+    <p>Descriptions of these releases are available from the <a href='https://gna.org/news/?group=relax'>relax news pages</a>.  These files can either be found on the <a href="http://download.gna.org/relax">relax download site</a> or are <a href="download_request.html">available upon request</a>.</p>
 
       <h2>The 2.2 line</h2>
 
