--- a/download.html
+++ b/download.html
@@ -39,7 +39,15 @@
     <li><a href="download.html#Source_code_repository">Source code repository</a></li>
     <li><a href="download.html#Security">Security</a></li>
     <li><a href="download.html#New_releases">New releases</a></li>
-    <li><a href="download.html#All_releases">All releases</a></li>
+    <li><a href="download.html#All_releases">All releases</a>
+     <ul>
+      <li><a href="download.html#2.2_series">2.2 series</a></li>
+      <li><a href="download.html#2.1_series">2.1 series</a></li>
+      <li><a href="download.html#2.0_series">2.0 series</a></li>
+      <li><a href="download.html#1.3_series">1.3 series</a></li>
+      <li><a href="download.html#1.2_series">1.2 series</a></li>
+      <li><a href="download.html#1.0_series">1.0 series</a></li>
+     </ul></li>
     </ul>
   </div>
 
@@ -311,7 +319,8 @@
 
     <p>Descriptions of these releases are available from the <a href='https://gna.org/news/?group=relax'>relax news pages</a>.  These files can either be found on the <a href="http://download.gna.org/relax">relax download site</a> or are <a href="download_request.html">available upon request</a>.</p>
 
-      <h2>The 2.2 line</h2>
+    <div id="2.2_series" class="main_h2">
+      <h2>The 2.2 series</h2>
 
 <table cellspacing="10">
   <tbody>
@@ -401,8 +410,10 @@
   </tbody>
 </table>
 
+    </div>
 
-      <h2>The 2.1 line</h2>
+    <div id="2.1_series" class="main_h2">
+      <h2>The 2.1 series</h2>
 
 <table cellspacing="10">
   <tbody>
@@ -529,8 +540,10 @@
   </tbody>
 </table>
 
+    </div>
 
-      <h2>The 2.0 line</h2>
+    <div id="2.0_series" class="main_h2">
+      <h2>The 2.0 series</h2>
 
 <table cellspacing="10">
   <tbody>
@@ -581,9 +594,10 @@
   </tbody>
 </table>
 
+    </div>
 
-
-      <h2>The 1.3 line</h2>
+    <div id="1.3_series" class="main_h2">
+      <h2>The 1.3 series</h2>
 
 <table cellspacing="10">
   <tbody>
@@ -1159,7 +1173,10 @@
   </tbody>
 </table>
 
-      <h2>The 1.2 line</h2>
+    </div>
+
+    <div id="1.2_series" class="main_h2">
+      <h2>The 1.2 series</h2>
 
 <table cellspacing="10">
   <tbody>
@@ -1529,7 +1546,10 @@
   </tbody>
 </table>
 
-      <h2>The 1.0 line</h2>
+    </div>
+
+    <div id="1.0_series" class="main_h2">
+      <h2>The 1.0 series</h2>
 
 <table cellspacing="10">
   <tbody>
