Attempt at fixing the CSS IDs in the http://www.nmr-relax.com/download.html webpage.

--- a/download.html
+++ b/download.html
@@ -41,12 +41,12 @@
     <li><a href="download.html#New_releases">New releases</a></li>
     <li><a href="download.html#All_releases">All releases</a>
      <ul>
-      <li><a href="download.html#2.2_series">2.2 series</a></li>
-      <li><a href="download.html#2.1_series">2.1 series</a></li>
-      <li><a href="download.html#2.0_series">2.0 series</a></li>
-      <li><a href="download.html#1.3_series">1.3 series</a></li>
-      <li><a href="download.html#1.2_series">1.2 series</a></li>
-      <li><a href="download.html#1.0_series">1.0 series</a></li>
+      <li><a href="download.html#series_2.2">2.2 series</a></li>
+      <li><a href="download.html#series_2.1">2.1 series</a></li>
+      <li><a href="download.html#series_2.0">2.0 series</a></li>
+      <li><a href="download.html#series_1.3">1.3 series</a></li>
+      <li><a href="download.html#series_1.2">1.2 series</a></li>
+      <li><a href="download.html#series_1.0">1.0 series</a></li>
      </ul></li>
     </ul>
   </div>
@@ -319,7 +319,7 @@
 
     <p>Descriptions of these releases are available from the <a href='https://gna.org/news/?group=relax'>relax news pages</a>.  These files can either be found on the <a href="http://download.gna.org/relax">relax download site</a> or are <a href="download_request.html">available upon request</a>.</p>
 
-    <div id="2.2_series" class="main_h2">
+    <div id="series_2.2" class="main_h2">
       <h2>The 2.2 series</h2>
 
 <table cellspacing="10">
@@ -449,7 +449,7 @@
 
     </div>
 
-    <div id="2.1_series" class="main_h2">
+    <div id="series_2.1" class="main_h2">
       <h2>The 2.1 series</h2>
 
 <table cellspacing="10">
@@ -579,7 +579,7 @@
 
     </div>
 
-    <div id="2.0_series" class="main_h2">
+    <div id="series_2.0" class="main_h2">
       <h2>The 2.0 series</h2>
 
 <table cellspacing="10">
@@ -633,7 +633,7 @@
 
     </div>
 
-    <div id="1.3_series" class="main_h2">
+    <div id="series_1.3" class="main_h2">
       <h2>The 1.3 series</h2>
 
 <table cellspacing="10">
@@ -1212,7 +1212,7 @@
 
     </div>
 
-    <div id="1.2_series" class="main_h2">
+    <div id="series_1.2" class="main_h2">
       <h2>The 1.2 series</h2>
 
 <table cellspacing="10">
@@ -1585,7 +1585,7 @@
 
     </div>
 
-    <div id="1.0_series" class="main_h2">
+    <div id="series_1.0" class="main_h2">
       <h2>The 1.0 series</h2>
 
 <table cellspacing="10">
